--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,19 @@
-<h1>index.html</h1>
+<!DOCTYPE html>
+<html lang="ja" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title></title>
+		<link rel="stylesheet" href="/style/main.css">
+		<script src="/component/socket-graph-data.ts" charset="utf-8" type="module"></script>
+	</head>
+	<body>
+		<header>
+			socket-graph
+		</header>
+		<main>
+			<socket-graph-data></socket-graph-data>
+			<socket-graph-drower></socket-graph-drower>
+		</main>
+		<footer>footer</footer>
+	</body>
+</html>
