--- a/static/index.html
+++ b/static/index.html
@@ -8,12 +8,12 @@
 	</head>
 	<body>
 		<header>
-			socket-graph
+			<h1>＜タイトル＞</h1>
 		</header>
 		<main>
 			<socket-graph-data></socket-graph-data>
 			<socket-graph-drower></socket-graph-drower>
 		</main>
-		<footer>footer</footer>
+		<footer>フッター</footer>
 	</body>
 </html>
