--- a/static/index.html
+++ b/static/index.html
@@ -27,4 +27,9 @@
 		const drower = document.createElement("socket-graph-drower");
 		main.appendChild(drower);
 	</script>
+	<script>
+		window.addEventListener("load", ()=>{
+			console.log("performance.now", performance.now())
+		})
+	</script>
 </html>
