--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title></title>
 		<link rel="stylesheet" href="/style/main.css">
-		<script src="/component/socket-graph-data.ts" charset="utf-8" type="module"></script>
+		<script src="/bundle.js" charset="utf-8" type="module"></script>
 	</head>
 	<body>
 		<header>
