link rel="preload"

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<link rel="preload" href="/component/data_list.ts" as="script">
+		<link rel="preload" href="/component/socket-graph-data.ts" as="script">
+		<link rel="preload" href="/utils/iter.ts" as="script">
+		<link rel="preload" href="/utils/list.ts" as="script">
 		<link rel="stylesheet" href="/style/main.css">
 		<script src="/component/socket-graph-data.ts" charset="utf-8" type="module"></script>
 	</head>
