feat: streaming data (#21)
* reviewdog

* test

* fmt test

* test

* test

* fix

* remove unnecessary change

* working

* some change

* ok

* performance.now

* console.error

* link rel="preload"

* crossorigin

* add dev code

* lint

* fix test

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
+		<link rel="preload" href="/component/data_list.ts" as="script" crossorigin>
+		<link rel="preload" href="/component/socket-graph-data.ts" as="script" crossorigin>
+		<link rel="preload" href="/utils/iter.ts" as="script" crossorigin>
+		<link rel="preload" href="/utils/list.ts" as="script" crossorigin>
 		<link rel="stylesheet" href="/style/main.css">
 		<script src="/component/socket-graph-data.ts" charset="utf-8" type="module"></script>
 	</head>
@@ -10,10 +14,27 @@
 		<header>
 			<h1>＜タイトル＞</h1>
 		</header>
-		<main>
-			<socket-graph-data></socket-graph-data>
-			<socket-graph-drower></socket-graph-drower>
-		</main>
+		<main></main>
 		<footer>フッター</footer>
 	</body>
+	<script type="module">
+		const id = new URL(location.href).searchParams.get("id");
+		if (!id) {
+			console.error("グラフを表示できません");
+			// alert("グラフを表示できません");
+			// location.href = "/"
+		}
+		const main = document.querySelector("main");
+		const graph = document.createElement("socket-graph-data");
+		graph.setAttribute("data-source-url", `/api/data/${id}?fromTime=%fromTime%&limit=%limit%`);
+		graph.setAttribute("data-source-streaming-url", `/sse/data/${id}`);
+		main.appendChild(graph);
+		const drower = document.createElement("socket-graph-drower");
+		main.appendChild(drower);
+	</script>
+	<script>
+		window.addEventListener("load", ()=>{
+			console.log("performance.now", performance.now())
+		})
+	</script>
 </html>
