--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,14 @@
 				overflow-x: scroll;
 				border-radius: 0.5em;
 			}
+			code{
+				background-color: whitesmoke;
+				padding: 0.3em;
+			}
+			pre>code{
+				background-color: transparent;
+				padding: 0;
+			}
 		</style>
 	</head>
 	<body>
@@ -38,11 +46,37 @@
 		<main>
 			<div>
 				<h3>利用方法</h3>
+				このサイトは、WebSocketを通してデータを送信することで、ブラウザでリアルタイムに更新されるグラフを作成することができるサービスです。
+				<h4>グラフを見たい場合</h4>
+				<ol>
+					<li>「グラフ表示」欄に表示したいグラフIDを入力する。</li>
+					<li>「表示」ボタンを押すと、グラフが表示されます。</li>
+				</ol>
+				<h4>グラフを作成したい場合</h4>
+				<ol>
+					<li>「アクセストークン取得」からアクセストークンを取得します。</li>
+					<li>「グラフデータの送信方法」を参考に、WebSocketでサーバーにデータを送信します。</li>
+				</ol>
 			</div>
 			<socket-graph-form-view-graph></socket-graph-form-view-graph>
 			<socket-graph-form-token></socket-graph-form-token>
 			<div>
 				<h3>グラフデータの送信方法</h3>
+				<ol>
+					<li>WebSocketを使って<code>wss://socket-graph.deno.dev/ws/send/＜グラフID＞</code>に接続します。</li>
+					<li>接続が開始されたら、最初の1回目の送信でアクセストークンを送信します。</li>
+					<li>
+						2回目以降は、グラフに表示したい値をJSONに変換し、送信します。<br>
+						JSONデータは以下のフォーマットに従う必要があります。
+						<ol>
+							<li><code>time</code>プロパティに、UnixTimeで時刻を指定します。（この値がグラフの横軸の値になります。）</li>
+							<li>その他の任意のプロパティに、値を指定します。（この値がグラフの縦軸の値になります。）プロパティ名がフラフの系列の名前になります。</li>
+						</ol>
+						例：<code>{"time": 1643853565613, "data1": 0.5}</code>を送信した場合→横軸の値が1643853565613(UnixTime)で、縦軸の系列<code>data1</code>の値が0.5としてプロットされます。
+					</li>
+					<li>データの送信を止めたい場合は、WebSocketの接続を閉じます。</li>
+				</ol>
+				コード例（JavaScript）
 				<pre><code>const delay = (ms) => new Promise((ok) => setTieout(ok));
 const ID = "＜あなたが指定したID＞";
 const TOKEN = "＜IDをもとに取得したトークン＞";
