--- a/static/index.html
+++ b/static/index.html
@@ -3,12 +3,12 @@
 	<head>
 		<meta charset="utf-8">
 		<title></title>
-		<link rel="preload" href="/component/data_list.ts" as="script" crossorigin>
-		<link rel="preload" href="/component/socket-graph-data.ts" as="script" crossorigin>
-		<link rel="preload" href="/utils/iter.ts" as="script" crossorigin>
-		<link rel="preload" href="/utils/list.ts" as="script" crossorigin>
+		<link rel="preload" href="/js/component/data_list.ts" as="script" crossorigin>
+		<link rel="preload" href="/js/component/socket-graph-data.ts" as="script" crossorigin>
+		<link rel="preload" href="/js/utils/iter.ts" as="script" crossorigin>
+		<link rel="preload" href="/js/utils/list.ts" as="script" crossorigin>
 		<link rel="stylesheet" href="/style/main.css">
-		<script src="/component/socket-graph-data.ts" charset="utf-8" type="module"></script>
+		<script src="/js/component/socket-graph-data.ts" charset="utf-8" type="module"></script>
 	</head>
 	<body>
 		<header>
