--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>socket-graph</title>
 		<link rel="preload" href="/js/component/data_list.js" as="script" crossorigin>
 		<link rel="preload" href="/js/component/socket-graph-data.js" as="script" crossorigin>
 		<link rel="preload" href="/js/utils/iter.js" as="script" crossorigin>
