--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>＜タイトル＞＜タイトル＞</h1>
+			<h1>＜タイトル＞</h1>
 		</header>
 		<main></main>
 		<footer>フッター</footer>
