--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html lang="ja" dir="ltr">
 	<head>
 		<meta charset="utf-8">
-		<title></title>
+		<title>socket-graph</title>
 		<link rel="stylesheet" href="/style/main.css">
 		<script src="/component/socket-graph-form.ts" charset="utf-8" type="module"></script>
 		<style>
