--- a/static/graph.html
+++ b/static/graph.html
@@ -19,12 +19,16 @@
 	</body>
 	<script type="module">
 		const id = new URL(location.href).searchParams.get("id");
+		const main = document.querySelector("main");
 		if (!id) {
 			console.error("グラフを表示できません");
 			// alert("グラフを表示できません");
 			// location.href = "/"
+			const div = document.createElement("div");
+			div.innerText = "グラフを表示できません。"
+			main.appendChild(div);
+			throw new Erroe("id not found");
 		}
-		const main = document.querySelector("main");
 		const graph = document.createElement("socket-graph-data");
 		graph.setAttribute("data-source-url", `/api/data/${id}?fromTime=%fromTime%&limit=%limit%`);
 		graph.setAttribute("data-source-streaming-url", `/sse/data/${id}`);
