--- a/static/graph.html
+++ b/static/graph.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>＜タイトル＞</h1>
+			<h1 id="title">socket-graph</h1>
 		</header>
 		<main></main>
 		<footer>
@@ -42,6 +42,8 @@
 		main.appendChild(graph);
 		const drower = document.createElement("socket-graph-drower");
 		main.appendChild(drower);
+
+		document.querySelector("#title").innerText = `graph-id: ${id}`
 	</script>
 	<script>
 		window.addEventListener("load", ()=>{
