--- a/static/graph.html
+++ b/static/graph.html
@@ -12,10 +12,17 @@
 	</head>
 	<body>
 		<header>
-			<h1>＜タイトル＞</h1>
+			<h1 id="title">socket-graph</h1>
 		</header>
 		<main></main>
-		<footer>フッター</footer>
+		<footer>
+			<h3>socket graph</h3>
+			<ul>
+				<li><a href="./">TOP</a></li>
+				<li><a href="./playground.html">playground</a></li>
+				<li><a href="https://github.com/ayame113/socket-graph/">GitHub</a></li>
+			</ul>
+		</footer>
 	</body>
 	<script type="module">
 		const id = new URL(location.href).searchParams.get("id");
@@ -27,14 +34,16 @@
 			const div = document.createElement("div");
 			div.innerText = "グラフを表示できません。"
 			main.appendChild(div);
-			throw new Erroe("id not found");
+			throw new Error("id not found");
 		}
 		const graph = document.createElement("socket-graph-data");
-		graph.setAttribute("data-source-url", `/api/data/${id}?fromTime=%fromTime%&limit=%limit%`);
-		graph.setAttribute("data-source-streaming-url", `/sse/data/${id}`);
+		graph.setAttribute("data-source-url", new URL(`/api/data/${id}?fromTime=%fromTime%&limit=%limit%`, location.href));
+		graph.setAttribute("data-source-streaming-url", new URL(`/sse/data/${id}`, location.href));
 		main.appendChild(graph);
 		const drower = document.createElement("socket-graph-drower");
 		main.appendChild(drower);
+
+		document.querySelector("#title").innerText = `graph-id: ${id}`
 	</script>
 	<script>
 		window.addEventListener("load", ()=>{
